[package]
name = "obsidian_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace=true }
# bevy = "0.13.1"
bevy_mod_picking = { workspace=true }
# bevy_reactor = { path = "../.." }
bevy_reactor_core = {path = "../bevy_reactor_core"}
bevy_reactor_style = {path = "../bevy_reactor_style"}
bevy_reactor_view = {path = "../bevy_reactor_view"}

